# RivalSearchAgent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: api.md  development.md  link_traversal_guide.md  mcp_inspector_guide.md  setup_guide.md  troubleshooting.md  usage.md
scripts/: deploy.sh  example_usage.py  install_deps.sh  lint.sh  run_server.py  run_tests.sh  setup_master.py
src/: __init__.py  api.py  cli.py  config.py  prompts.py  resources.py  server.py
src/RivalSearchMCP/src/: __init__.py  config.py  logger.py  server.py
src/RivalSearchMCP/src/core/: __init__.py
src/RivalSearchMCP/src/core/bypass/: __init__.py  paywall_bypass.py  proxy_management.py
src/RivalSearchMCP/src/core/extract/: __init__.py  search_extraction.py  triple_extraction.py
src/RivalSearchMCP/src/core/fetch/: __init__.py  base_fetch.py  batch_retrieval.py  enhanced_retrieval.py  resource_management.py
src/RivalSearchMCP/src/core/google_search/: __init__.py  html_parser.py  models.py  scraper.py
src/RivalSearchMCP/src/core/search/: __init__.py  html_parser.py  main.py  models.py  multi_engine.py  ocr_processing.py
src/RivalSearchMCP/src/core/traverse/: __init__.py  core_traverser.py  specialized_traversal.py
src/RivalSearchMCP/src/schemas/: __init__.py  common_schemas.py  retrieval_schemas.py  web_tools_schemas.py
src/RivalSearchMCP/src/tools/: analysis_tools.py  retrieval_tools.py  search_tools.py  traversal_tools.py
src/RivalSearchMCP/src/utils/: __init__.py  content_processing.py  error_handling.py  headers_cookies.py  html_parsing.py  http_clients.py  user_agents.py
src/core/: __init__.py  agent.py  bypass.py  cli.py  config.py  exceptions.py  extract.py  fetch.py  multi_modal.py  retry_handler.py  traversal.py
src/core/services/: __init__.py  document_service.py  memory_service.py  rag_service.py  search_service.py
src/core/utils/: __init__.py  logging.py  validation.py
src/data_store/: __init__.py  manager.py  utils.py
src/reasoning/: __init__.py  processor.py
src/tools/: __init__.py  data_tools.py  reasoning_tools.py  web_tools.py
src/types/: __init__.py  schemas.py
tests/: test_bypass.py  test_config.py  test_extract.py  test_fetch.py  test_logger.py  test_manager.py  test_multi_modal.py  test_processor.py  test_reason.py  test_retrieve.py  test_server.py  test_store_tools.py  test_stream.py  test_traversal.py  test_utils.py
